--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,16 @@
-# dist/
-# .astro/
+dist/
+.astro/
 
-# node_modules/
+node_modules/
 
-# npm-debug.log*
-# yarn-debug.log*
-# yarn-error.log*
-# pnpm-debug.log*
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
 
-# .env
-# .env.production
+.env
+.env.production
 
-# .DS_Store
+.DS_Store
 
-# .idea/
+.idea/
