--- a/package.json
+++ b/package.json
@@ -10,5 +10,16 @@
   },
   "devDependencies": {
     "astro": "^5.15.1"
+  },
+  "dependencies": {
+    "@astrojs/react": "^4.4.0",
+    "@iconify-icon/react": "^3.0.2",
+    "@iconify/json": "^2.2.401",
+    "@iconify/utils": "^3.0.2",
+    "@types/react": "^19.2.2",
+    "@types/react-dom": "^19.2.2",
+    "astro-icon": "^1.1.5",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0"
   }
 }
