--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@iconify/utils": "^3.0.2",
     "@types/react": "^19.2.2",
     "@types/react-dom": "^19.2.2",
+    "astro-compress": "^2.3.8",
     "astro-icon": "^1.1.5",
     "react": "^19.2.0",
     "react-dom": "^19.2.0"
