--- a/src/data/releases.json
+++ b/src/data/releases.json
@@ -2,7 +2,7 @@
   {
     "slug": "reset",
     "title": "RE:SET",
-    "artist": "Protocol Zero",
+    "artist": "The Martens | Chr-s | LED. | The Sun Vanished",
     "date": "January 2026",
     "image": "/images/reset.png",
     "description": "Coming Soon"
