--- a/src/data/releases.json
+++ b/src/data/releases.json
@@ -6,5 +6,13 @@
     "date": "January 2026",
     "image": "/images/reset.png",
     "description": "Coming Soon"
+},
+  {
+    "slug": "reset",
+    "title": "SINGLE",
+    "artist": "The Martens",
+    "date": "February 2026",
+    "image": "/images/tsv.jpg",
+    "description": "Coming Soon"
 }
 ]
