--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/react-dom": "^19.2.2",
     "astro-compress": "^2.3.8",
     "astro-icon": "^1.1.5",
+    "baffle": "^0.3.6",
     "react": "^19.2.0",
     "react-dom": "^19.2.0"
   }
