--- a/package.json
+++ b/package.json
@@ -3,13 +3,26 @@
   "type": "module",
   "version": "0.0.1",
   "scripts": {
-    "dev": "astro dev",
-    "build": "astro build",
+    "dev": "npm-run-all --parallel dev:astro dev:watch",
+    "dev:astro": "astro dev",
+    "dev:watch": "node scripts/watch.js",
+    "build": "node scripts/build-styles.js && node scripts/build-scripts.js && astro build",
+    "build:styles": "node scripts/build-styles.js",
+    "build:scripts": "node scripts/build-scripts.js",
     "preview": "astro preview",
-    "astro": "astro"
+    "astro": "astro",
+    "init:styles": "node scripts/build-styles.js --init",
+    "init:scripts": "node scripts/build-scripts.js --init"
   },
   "devDependencies": {
-    "astro": "^5.16.11"
+    "astro": "^5.16.11",
+    "chokidar": "^5.0.0",
+    "cssnano": "^7.1.2",
+    "esbuild": "^0.27.2",
+    "npm-run-all2": "^8.0.4",
+    "postcss": "^8.5.6",
+    "prettier": "^3.8.0",
+    "terser": "^5.46.0"
   },
   "dependencies": {
     "@astrojs/react": "^4.4.0",
