--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "terser": "^5.46.0"
   },
   "dependencies": {
+    "-": "^0.0.1",
     "@astrojs/react": "^4.4.0",
     "@iconify-icon/react": "^3.0.2",
     "@iconify/json": "^2.2.401",
@@ -34,6 +35,7 @@
     "astro-compress": "^2.3.8",
     "astro-icon": "^1.1.5",
     "baffle": "^0.3.6",
+    "baseline-browser-mapping": "^2.9.15",
     "react": "^19.2.0",
     "react-dom": "^19.2.0"
   }
