--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "npm-run-all2": "^8.0.4",
     "postcss": "^8.5.6",
     "prettier": "^3.8.0",
+    "sass": "^1.83.0",
     "terser": "^5.46.0"
   },
   "dependencies": {
