Single Artists and Release pages

--- a/src/data/releases.json
+++ b/src/data/releases.json
@@ -3,8 +3,18 @@
     "slug": "reset",
     "title": "RE:SET",
     "artist": "Various Artists",
+    "fullArtists": "The Martens, Chr-s, LED., The Sun Vanished",
     "date": "January 2026",
     "image": "/images/releases/reset.png",
-    "description": "Coming Soon"
-}
+    "description": "Coming Soon",
+    "links": {
+      "spotify": "",
+      "soundcloud": "",
+      "youtube": "",
+      "beatport": ""
+    },
+    "spotifyEmbed": "",
+    "soundcloudEmbed": "",
+    "youtubeEmbed": ""
+  }
 ]
