--- a/src/data/releases.json
+++ b/src/data/releases.json
@@ -13,8 +13,8 @@
       "youtube": "",
       "beatport": ""
     },
-    "spotifyEmbed": "https://open.spotify.com/playlist/79xxn9IepLlyeuaVjHfEjo",
-    "soundcloudEmbed": "https://on.soundcloud.com/53YZc7Rc0MfHHWvcDl",
+    "spotifyEmbed": "spotify:playlist:79xxn9IepLlyeuaVjHfEjo",
+    "soundcloudEmbed": "https://soundcloud.com/themartens/sets/ambush-ep-drumatch-records?si=8ccf788f02c348e5b33dc83b725586de&utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing",
     "youtubeEmbed": ""
   }
 ]
