Added preview on release page

--- a/src/data/releases.json
+++ b/src/data/releases.json
@@ -7,6 +7,7 @@
     "fullArtists": "The Martens, Chr-s, LED., The Sun Vanished",
     "date": "January 2026",
     "image": "/images/releases/reset.png",
+    "video": "/videos/reset.mp4",
     "description": "Coming Soon",
     "links": {
       "spotify": "https://open.spotify.com/playlist/79xxn9IepLlyeuaVjHfEjo",
